--- a/components/dotnet-basic-guzlyqpi/overlays/development/deployment-patch.yaml
+++ b/components/dotnet-basic-guzlyqpi/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: dotnet-basic-guzlyqpi
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.7
-        name: container-image  
+        - image: quay.io/rhtap_qe/dotnet-basic-guzlyqpi:24b4b52671781787cac93f17047bdf494d4bf4bd@sha256:12c8928262bc8b1f91a4420eb11ae7fcfb9d7031ef04f52d2bc3ee07158938ff
+          name: container-image
